--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 
   <script src='spectrum.js'></script>
   <link rel='stylesheet' href='spectrum.css' />
+  <script src="Grid.js"></script>
+  <script src="buttonList.js"></script>
+  <script src="Input.js"></script>
+
 </head>
 
 <body>
