--- a/index.html
+++ b/index.html
@@ -8,19 +8,41 @@
   <link rel='stylesheet' href='spectrum.css' />
   <script src="Grid.js"></script>
   <script src="buttonList.js"></script>
-  <script src="Toolbar.js"></script>
+
   <script src="Input.js"></script>
 
 </head>
 
 <body>
   <div class="toolbar">
-    <h2 style="color:white">MVCode Tile Editor: In Development</h2>
-    <ul>
+    <h2 style="color:white; display:inline-block">MVCode Tile Editor</h2>
+    <ul style="display:inline-block; padding-left: 5px">
       <li>
-        <input id="gridSizeInput">
-          <button id="gridSizeBtn">Set gridSize</button>
-        </input>
+        Grid Size:
+        <input id="gridSizeInput" value="32"></input>
+      </li>
+      <li>
+        <ul id="gridSizeUpDown" style="padding-left:0px">
+          <li><button id="gridSizeDown">-</button></li>
+          <li><button id="gridSizeUp">+</button></li>
+        </ul>
+      </li>
+      <li>
+        <button id="resize">Update</button>
+      </li>
+      <li>
+        Columns:
+        <input id="numColInput" value="20"></input>
+      </li>
+      <li>
+        Rows:
+        <input id="numRowInput" value="15"></input>
+      </li>
+      <li>
+        <button id="resize">Resize</button>
+      </li>
+      <li>
+        <button id="clearAll">Clear</button>
       </li>
     </ul>
   </div>
@@ -47,7 +69,7 @@
     </div>
 
     <div id="listTitle">Layers</div>
-    <ul id="buttons"></ul>
+    <ul id="layerButtons"></ul>
 
     <script>
       document.addEventListener('contextmenu', event => event.preventDefault());
@@ -55,7 +77,7 @@
   </div>
 
   <div id="myCanvas"></div>
-  <button id="resize">Resize</button>
 
+  <script src="Toolbar.js"></script>
   <script src="index.js"></script>
 </body>
