--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script src='spectrum.js'></script>
   <link rel='stylesheet' href='spectrum.css' />
   <script src="Grid.js"></script>
+  <script src="Tile.js"></script>
   <script src="buttonList.js"></script>
 
   <script src="Input.js"></script>
@@ -15,7 +16,7 @@
 
 <body>
   <div class="toolbar">
-    <h2 style="color:white; display:inline-block">MVCode Tile Editor</h2>
+    <h3 style="color:white; padding-left:25px; display:inline-block">MVCode Tile Editor</h3>
     <ul style="display:inline-block; padding-left: 5px">
       <li>
         Grid Size:
