--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
           <li><img title="fill" src="https://png.icons8.com/metro/40/000000/fill-color.png"></li>
           <li><img title="select" src="https://png.icons8.com/ios-glyphs/40/000000/select-none.png"></li>
           <li><img title="move" src="https://png.icons8.com/material-two-tone/40/000000/move.png"></li>
+          <li><img title="undo" src="https://png.icons8.com/material/40/000000/undo.png"></li>
+          <li><img title="redo" src="https://png.icons8.com/material-outlined/40/000000/redo.png"></li>
         </ul>
       </li>
       <li>
