ready for multimove

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel='stylesheet' href='spectrum.css' />
   <script src="Grid.js"></script>
   <script src="Tile.js"></script>
+  <script src="Images.js"></script>
   <script src="buttonList.js"></script>
 
   <script src="Input.js"></script>
