started tileset selector

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       <li style="vertical-align:top;">
         <ul id="paintTools">
           <li><img title="paintbrush" src="https://png.icons8.com/windows/40/000000/paint-brush.png"></li>
+          <li><img title="rectangle" src="https://image.flaticon.com/icons/svg/1142/1142014.svg"></li>
           <li><img title="eye dropper" src="https://png.icons8.com/material-rounded/40/000000/color-dropper.png"></li>
           <li><img title="fill" src="https://png.icons8.com/metro/40/000000/fill-color.png"></li>
           <li><img title="select" src="https://png.icons8.com/ios-glyphs/40/000000/select-none.png"></li>
@@ -92,3 +93,12 @@
   <script src="Tools.js"></script>
   <script src="index.js"></script>
 </body>
+
+<div id="tileSetBox">
+  <div>
+    <img id="clip" src="https://i.imgur.com/ThJUBtM.png">
+  </div>
+  <div id="centerDiv">
+    <img src="https://i.imgur.com/ThJUBtM.png">
+  </div>
+</div>
