--- a/index.html
+++ b/index.html
@@ -89,14 +89,24 @@
 
   <div id="myCanvas"></div>
 
+  <div id="tileSetBox">
+    <select id="chooseTileset">
+      <option value="volvo">Volvo</option>
+      <option value="saab">Saab</option>
+      <option value="mercedes">Mercedes</option>
+      <option value="audi">Audi</option>
+    </select>
+    <div id="centerDiv">
+      <img id="tileset" src="https://i.imgur.com/38qRsPz.png" draggable="false">
+      <div id="tileSelector"></div>
+    </div>
+    <script src="TilesetWindow.js"></script>
+
+  </div>
+
+
+
   <script src="Toolbar.js"></script>
   <script src="Tools.js"></script>
   <script src="index.js"></script>
 </body>
-
-<div id="tileSetBox">
-  <img id="clip" src="https://i.imgur.com/ThJUBtM.png">
-  <div id="centerDiv">
-    <img src="https://i.imgur.com/ThJUBtM.png">
-  </div>
-</div>
