select Tileset portion working

--- a/index.html
+++ b/index.html
@@ -97,9 +97,11 @@
       <option value="audi">Audi</option>
     </select>
     <div id="centerDiv">
-      <img id="tileset" src="https://i.imgur.com/38qRsPz.png" draggable="false">
-      <div id="tileSelector"></div>
+      <img id="tileset" src="https://i.imgur.com/MnSjPVk.png" draggable="false">
+      <div id="tileSelector" draggable="false"></div>
     </div>
+    <button id="tilesetCancel">Cancel</button>
+    <button id="tilesetUpdate">Update</button>
     <script src="TilesetWindow.js"></script>
 
   </div>
