--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
   <div class="toolbar">
-    <h3 style="color:white; padding-left:25px; display:inline-block">MVCode Tile Editor</h3>
+    <!-- <h3 style="color:white; padding-left:25px; display:inline-block">MVCode Tile Editor</h3> -->
     <ul style="display:inline-block; padding-left: 5px">
       <li>
         Grid Size:
