--- a/index.html
+++ b/index.html
@@ -90,23 +90,16 @@
   <div id="myCanvas"></div>
 
   <div id="tileSetBox">
-    <select id="chooseTileset">
-      <option value="volvo">Volvo</option>
-      <option value="saab">Saab</option>
-      <option value="mercedes">Mercedes</option>
-      <option value="audi">Audi</option>
-    </select>
+    <select id="chooseTileset"></select>
+    <input id="smartTileBox" type="checkbox">Smart Tile</input>
     <div id="centerDiv">
-      <img id="tileset" src="https://i.imgur.com/MnSjPVk.png" draggable="false">
+      <img id="tileset" src="images/castleTileSet.png" draggable="false">
       <div id="tileSelector" draggable="false"></div>
     </div>
     <button id="tilesetCancel">Cancel</button>
     <button id="tilesetUpdate">Update</button>
     <script src="TilesetWindow.js"></script>
-
   </div>
-
-
 
   <script src="Toolbar.js"></script>
   <script src="Tools.js"></script>
