--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       <li style="vertical-align:top;">
         <ul id="paintTools">
           <li><img title="paintbrush" src="https://png.icons8.com/windows/40/000000/paint-brush.png"></li>
+          <li><img title="sprite" src="https://i.imgur.com/9C22Zsh.png"></li>
           <li><img title="rectangle" src="https://image.flaticon.com/icons/svg/1142/1142014.svg"></li>
           <li><img title="eye dropper" src="https://png.icons8.com/material-rounded/40/000000/color-dropper.png"></li>
           <li><img title="fill" src="https://png.icons8.com/metro/40/000000/fill-color.png"></li>
@@ -58,7 +59,11 @@
     </ul>
   </div>
   <div id="buttonList">
-    <div id="listTitle">Tiles List</div>
+    <div id="listTitle">
+      <button class="tileListBtn">Tiles</button>
+      <button class="tileListBtn">Sprites</button>
+    </div>
+
     <ul id="buttons"></ul>
     <div id="listTitle">Add Tile</div>
     <div id="addButtons">
